# udp-connections-serialize

./: deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/udp-connections-serialize/: client_in.h  client_out.h  serialize.h  server_in.h  server_out.h
src/lib/: CMakeLists.txt  client_in.c  client_out.c  serialize.c  server_in.c  server_out.c
